@@ -524,7 +524,8 @@ FUNTAB R_FunTab[] = {
     {"regexpr", do_regexpr, 0, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"gregexpr", do_regexpr, 1, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
     {"regexec", do_regexec, 1, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
-    {"agrep", do_agrep, 1, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
+    {"agrep", do_agrep, 0, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
+    {"agrepl", do_agrep, 1, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
     {"adist", do_adist, 1, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
     {"aregexec", do_aregexec, 1, 11, 7, {PP_FUNCALL, PREC_FN, 0}},
     {"tolower", do_tolower, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
